--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ body {
   font-size: 1.5rem;
   font-weight: 500;
   margin: 0;
+  cursor: pointer;
 }
 
 .user-controls {
@@ -162,10 +163,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-#landing-page {
-  background-color: var(--light-color);
 }
 
 .landing-page-container {
